fixed three columns rows gap

--- a/style.css
+++ b/style.css
@@ -111,13 +111,12 @@ h6{
     margin-top: 100px;
 }
 
-.three-columns{
+.three-columns {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr;
     gap: 50px;
-    width: 88%;     
-    margin: 0 auto; 
+    width: 88%;
+    margin: 0 auto;
 }
 
 .three-columns img{
